--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.5)# cmake's  version in ubuntu 16.04 is 3.5.x
 project(PortProtection C)
 
-set(CMAKE_C_STANDARD 11)
+#set(CMAKE_C_STANDARD 11)
 
 link_libraries(ssl crypto pthread)
 
-add_executable(PortProtection
+add_executable(port-protection
         main.c
         commandline_parser.c
         help.c
@@ -22,5 +22,5 @@ add_executable(PortProtection
         )
 
 
-#add_executable(PortProtection test.c request_parser.c)
+#add_executable(port-protection test.c request_parser.c)
 
